--- a/package.json
+++ b/package.json
@@ -1,27 +1,86 @@
 {
   "name": "sanad-bot",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "منصة متقدمة لإنشاء مساعدين أذكياء مدعومة بالذكاء الاصطناعي وتقنية RAG",
+  "keywords": [
+    "ai",
+    "chatbot",
+    "rag",
+    "gemini",
+    "nextjs",
+    "typescript",
+    "prisma",
+    "tailwindcss",
+    "arabic",
+    "intelligent-assistant",
+    "knowledge-base",
+    "saas"
+  ],
+  "author": {
+    "name": "Sanad Team",
+    "email": "team@sanad.ai",
+    "url": "https://sanad.ai"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sanad-ai/sanad-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sanad-ai/sanad-bot/issues"
+  },
+  "homepage": "https://sanad.ai",
+  "private": false,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3002",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx scripts/seed-demo.ts",
+    "db:seed-test": "tsx scripts/seed-test-user.ts",
+    "db:deploy": "prisma migrate deploy",
+    "postinstall": "prisma generate",
+    "clean": "rm -rf .next out dist",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.12.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
+    "next": "15.4.1",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tsx": "^4.19.2",
+    "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
